tests/method_loc/method_loc.exp
Error ----------------------------------------------------------------------------------------------------- class.js:5:1

Cannot cast `C.m` to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   class.js:5:1
   5| C.m as empty; //err
      ^^^

References:
   class.js:2:3
   2|   static m() {};
        ^^^^^^^^^^^^^ [1]
   class.js:5:8
   5| C.m as empty; //err
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- class.js:6:1

Cannot cast `(new C()).m` to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   class.js:6:1
   6| new C().m as empty; // err
      ^^^^^^^^^

References:
   class.js:3:3
   3|   m() {};
        ^^^^^^ [1]
   class.js:6:14
   6| new C().m as empty; // err
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- class.js:6:9

Cannot get `(new C()).m` because property `m` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   class.js:6:9
   6| new C().m as empty; // err
              ^ [1]

References:
   class.js:3:3
   3|   m() {};
        ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- class_dep.js:2:1

Cannot cast `C.m` to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   class_dep.js:2:1
   2| C.m as empty; //err
      ^^^

References:
   class.js:2:3
   2|   static m() {};
        ^^^^^^^^^^^^^ [1]
   class_dep.js:2:8
   2| C.m as empty; //err
             ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- class_dep.js:3:1

Cannot cast `(new C()).m` to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   class_dep.js:3:1
   3| new C().m as empty; // err
      ^^^^^^^^^

References:
   class.js:3:3
   3|   m() {};
        ^^^^^^ [1]
   class_dep.js:3:14
   3| new C().m as empty; // err
                   ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- class_dep.js:3:9

Cannot get `(new C()).m` because property `m` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   class_dep.js:3:9
   3| new C().m as empty; // err
              ^ [1]

References:
   class.js:3:3
   3|   m() {};
        ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declare_class.js:5:1

Cannot cast `C.m` to empty because function type [1] is incompatible with empty [2]. [incompatible-type]

   declare_class.js:5:1
   5| C.m as empty; //err
      ^^^

References:
   declare_class.js:2:3
   2|   static m(): void;
        ^^^^^^^^^^^^^^^^ [1]
   declare_class.js:5:8
   5| C.m as empty; //err
             ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declare_class.js:6:1

Cannot cast `(new C()).m` to empty because function type [1] is incompatible with empty [2]. [incompatible-type]

   declare_class.js:6:1
   6| new C().m as empty; // err
      ^^^^^^^^^

References:
   declare_class.js:3:3
   3|   m(): void;
        ^^^^^^^^^ [1]
   declare_class.js:6:14
   6| new C().m as empty; // err
                   ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declare_class.js:6:9

Cannot get `(new C()).m` because property `m` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   declare_class.js:6:9
   6| new C().m as empty; // err
              ^ [1]

References:
   declare_class.js:3:3
   3|   m(): void;
        ^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- declare_class_dep.js:2:1

Cannot cast `C.m` to empty because function type [1] is incompatible with empty [2]. [incompatible-type]

   declare_class_dep.js:2:1
   2| C.m as empty; //err
      ^^^

References:
   declare_class.js:2:3
   2|   static m(): void;
        ^^^^^^^^^^^^^^^^ [1]
   declare_class_dep.js:2:8
   2| C.m as empty; //err
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------- declare_class_dep.js:3:1

Cannot cast `(new C()).m` to empty because function type [1] is incompatible with empty [2]. [incompatible-type]

   declare_class_dep.js:3:1
   3| new C().m as empty; // err
      ^^^^^^^^^

References:
   declare_class.js:3:3
   3|   m(): void;
        ^^^^^^^^^ [1]
   declare_class_dep.js:3:14
   3| new C().m as empty; // err
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------- declare_class_dep.js:3:9

Cannot get `(new C()).m` because property `m` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   declare_class_dep.js:3:9
   3| new C().m as empty; // err
              ^ [1]

References:
   declare_class.js:3:3
   3|   m(): void;
        ^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- interface.js:5:1

Cannot cast `o.m` to empty because function type [1] is incompatible with empty [2]. [incompatible-type]

   interface.js:5:1
   5| o.m as empty; // err
      ^^^

References:
   interface.js:2:3
   2|   m(): void,
        ^^^^^^^^^ [1]
   interface.js:5:8
   5| o.m as empty; // err
             ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- interface.js:5:3

Cannot get `o.m` because property `m` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   interface.js:5:3
   5| o.m as empty; // err
        ^ [1]

References:
   interface.js:2:3
   2|   m(): void,
        ^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- interface_dep.js:2:1

Cannot cast `o.m` to empty because function type [1] is incompatible with empty [2]. [incompatible-type]

   interface_dep.js:2:1
   2| o.m as empty; // err
      ^^^

References:
   interface.js:2:3
   2|   m(): void,
        ^^^^^^^^^ [1]
   interface_dep.js:2:8
   2| o.m as empty; // err
             ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- interface_dep.js:2:3

Cannot get `o.m` because property `m` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   interface_dep.js:2:3
   2| o.m as empty; // err
        ^ [1]

References:
   interface.js:2:3
   2|   m(): void,
        ^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- obj_lit.js:2:1

Cannot cast `o.m` to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   obj_lit.js:2:1
   2| o.m as empty; // err
      ^^^

References:
   obj_lit.js:1:13
   1| const o = { m() {} };
                  ^^^^^^ [1]
   obj_lit.js:2:8
   2| o.m as empty; // err
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- obj_lit_dep.js:2:1

Cannot cast `o.m` to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   obj_lit_dep.js:2:1
   2| o.m as empty; // err
      ^^^

References:
   obj_lit.js:1:13
   1| const o = { m() {} };
                  ^^^^^^ [1]
   obj_lit_dep.js:2:8
   2| o.m as empty; // err
             ^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- obj_type.js:2:1

Cannot cast `o.m` to empty because function type [1] is incompatible with empty [2]. [incompatible-type]

   obj_type.js:2:1
   2| o.m as empty; // err
      ^^^

References:
   obj_type.js:1:18
   1| declare var o: { m(): void };
                       ^^^^^^^^^ [1]
   obj_type.js:2:8
   2| o.m as empty; // err
             ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- obj_type_dep.js:2:1

Cannot cast `o.m` to empty because function type [1] is incompatible with empty [2]. [incompatible-type]

   obj_type_dep.js:2:1
   2| o.m as empty; // err
      ^^^

References:
   obj_type.js:1:18
   1| declare var o: { m(): void };
                       ^^^^^^^^^ [1]
   obj_type_dep.js:2:8
   2| o.m as empty; // err
             ^^^^^ [2]



Found 20 errors
